// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestStatusChoiceGroup render 1`] = `
<div>
  <div
    className="radioButtonGroup"
  >
    <StyledChoiceGroupBase
      className="PASS"
      componentRef={[Function]}
      onChange={[Function]}
      options={
        Array [
          Object {
            "ariaLabel": "Pass",
            "key": "PASS",
            "onRenderLabel": [Function],
            "text": "Pass",
          },
          Object {
            "ariaLabel": "Fail",
            "key": "FAIL",
            "onRenderLabel": [Function],
            "text": "Fail",
          },
        ]
      }
      selectedKey="PASS"
    />
  </div>
  <div />
</div>
`;

exports[`TestStatusChoiceGroup render: selectedKey is not set to undefined as status is PASS 1`] = `
<div>
  <div
    className="radioButtonGroup"
  >
    <StyledChoiceGroupBase
      className="PASS"
      componentRef={[Function]}
      onChange={[Function]}
      options={
        Array [
          Object {
            "ariaLabel": "Pass",
            "key": "PASS",
            "onRenderLabel": [Function],
            "text": "Pass",
          },
          Object {
            "ariaLabel": "Fail",
            "key": "FAIL",
            "onRenderLabel": [Function],
            "text": "Fail",
          },
        ]
      }
      selectedKey="PASS"
    />
  </div>
  <div />
</div>
`;

exports[`TestStatusChoiceGroup render: selectedKey is set to UNKNOWN as status is UNKNOWN 1`] = `
<div>
  <div
    className="radioButtonGroup"
  >
    <StyledChoiceGroupBase
      className="UNKNOWN"
      componentRef={[Function]}
      onChange={[Function]}
      options={
        Array [
          Object {
            "ariaLabel": "Pass",
            "key": "PASS",
            "onRenderLabel": [Function],
            "text": "Pass",
          },
          Object {
            "ariaLabel": "Fail",
            "key": "FAIL",
            "onRenderLabel": [Function],
            "text": "Fail",
          },
        ]
      }
      selectedKey="UNKNOWN"
    />
  </div>
  <div />
</div>
`;
